<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Quizdroid</string>
    <string name="action_settings">Settings</string>
    <string name="begin">Begin!</string>
    <string name="numQ">Number of Questions: 2</string>
    <string name="math">Math Overview</string>
    <string name="math_overview">This talks about what should go in this section. Spoiler alert, there will be Math!</string>
    <string name="physics">Physics Overview</string>
    <string name="physics_overview">This talks about what should go in this section. Spoiler alert, there will be Physics!</string>
    <string name="superhero">Marvel Superheroes Overview</string>
    <string name="superhero_overview">This talks about what should go in this section. Spoiler alert, there will be Marvel Superhero questions!</string>
    <string name="title_activity_math_over_view">MathOverView</string>
    <string name="title_activity_physics_overview">PhysicsOverview</string>
    <string name="title_activity_superhero_overview">SuperheroOverview</string>
    <string name="title_activity_math_q1">MathQ1</string>
    <string name="title_activity_between_question">BetweenQuestion</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_topic_overview">TopicOverview</string>
    <string name="title_activity_question">Question</string>
    <string name="next">Next!</string>

</resources>
